--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,1 @@
-@import "../base/colores", "../base/maps", "../base/variables", "../componentes/contactos", "../base/listas", "../base/extended", "../base/mixin"
-
+@import  "../base/variables", "../componentes/contactos",    "../componentes/todolodemas"
