--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,1 @@
-@import  "../base/variables", "../componentes/contactos",    "../componentes/todolodemas"
+@import  "./base/variables", "./componentes/contactos",  "./componentes/todolodemas", "./base/map", "./base/mixin", "./base/extend"
