--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,6 @@
-@import  "./base/variables", "./componentes/contactos",  "./componentes/todolodemas", "./base/map", "./base/mixin", "./base/extend"
+ @import "./base/variables";
+ @import"./base/extend";
+ @import "./base/mixin";
+ @import "./base/map";
+ @import "./componentes/contactos";
+ @import "./componentes/todolodemas";
